@@ -31,14 +31,6 @@ env.Prepend(CPPPATH=['../../include'],
             LIBPATH=['../../lib'],
             LIBS=[env.get('DYNLIB','')+'rsf'])
 
-fftw = env.get('FFTW')
-if fftw:
-    env.Prepend(CPPDEFINES=['SF_HAS_FFTW'])
-    libs.insert(0,fftw)
-
-print fftw
-
-
 for source in src:
     inc = env.RSF_Include(source,prefix='')
     obj = env.StaticObject(source)
